<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView 
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center"
        android:textSize="30sp"/>
<EditText 
    android:id="@+id/et_username"
    android:layout_marginTop="60sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/et_uname_title"/>

<EditText 
    android:id="@+id/et_password"
    android:inputType="textPassword"
    android:layout_below="@id/et_username"
    android:layout_marginTop="10sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/et_password_title"/>

<LinearLayout
    android:id="@+id/container_login_signup_buttons"
    android:layout_below="@id/et_password"
    android:layout_width="fill_parent"
    android:layout_marginTop="15sp"
    android:orientation="horizontal"
    android:weightSum="2"
    android:layout_height="wrap_content">
<Button
    android:id="@+id/btn_login"
    android:layout_below="@id/et_password"
    android:layout_marginTop="5sp"
    android:layout_weight="1"
    android:layout_width="0dp"
    android:background="@drawable/button_style_blue"
    android:textColor="@android:color/white"
    android:layout_height="wrap_content"
    android:text="@string/login_title"/>

<Button 
    android:id="@+id/btn_signup"
    android:layout_below="@id/btn_login"
    android:layout_marginLeft="@dimen/btn_left_margin"
    android:layout_marginTop="5sp"
    android:background="@drawable/button_style_blue"
    android:textColor="@android:color/white"
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"

    android:text="@string/btn_signup_title"/>
</LinearLayout>
</RelativeLayout>
