<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="10sp"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/container_empty_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <ImageView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#0000"
            android:src="@android:drawable/ic_menu_add"/>
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="#0000"
            android:text="Add New Trip" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/layout_sent_requests_container"
        android:layout_height="fill_parent">
    <TextView
        android:id="@+id/tv_title"
        android:text="@string/title_sent_requests"
       android:gravity="center_horizontal"
        android:background="@color/darkred"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content" />
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_marginTop="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
     <TableRow
        android:id="@+id/sentRequestTableRowSource"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_marginLeft="10sp"
            android:text="Source:"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_sent_request_source"
            android:layout_marginLeft="10sp"
            android:text="@string/sample_source"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
        <TableRow
            android:id="@+id/sentRequestTableRowDestination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_marginLeft="10sp"
                android:text="Destination:"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tv_sent_request_destination"
                android:layout_marginLeft="10sp"
                android:text="@string/sample_source"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
        <TableRow
        android:id="@+id/sentRequestTableRowStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_marginLeft="10sp"
            android:text="Status:"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_sent_request_status"
            android:layout_marginLeft="10sp"
            android:text="@string/title_active"
            android:textColor="@android:color/holo_green_dark"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
        <TableRow
            android:id="@+id/sentRequestTableRowTimeLeft"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_marginLeft="10sp"
                android:text="Expire At:"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tv_sent_request_time_left"
                android:layout_marginLeft="10sp"
                android:text="@string/title_active"
                android:textColor="@android:color/holo_green_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

</TableLayout>
    <LinearLayout
        android:id="@+id/sentRequestTableRowButtons"
        android:layout_width="fill_parent"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_fragment_my_trips_view_trip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style_blue"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_left_margin"
            android:text="@string/title_view"/>
<RelativeLayout
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content">

    <Button
    android:id="@+id/btn_sent_request_expire"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:background="@drawable/button_style_blue"
        android:textColor="@android:color/white"
    android:text="@string/title_expire"/>
    <Button
        android:id="@+id/btn_fragment_my_trips_delete_trip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:background="@drawable/button_style_blue"
        android:textColor="@android:color/white"
        android:text="@string/title_Delete"/>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/btn_left_margin"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_sent_request_send_again"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_red"
            android:textColor="@android:color/white"
            android:text="@string/title_send_again"/>
            <Button
                android:id="@+id/btn_fragment_my_trips_send_help_request"
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:background="@drawable/button_style_red"
                android:textColor="@android:color/white"
                android:text="@string/title_send_request"/>
        </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>